k8s/gce/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logomotive
---
apiVersion: v1
kind: Service
metadata:
  name: logomotive-svc
  annotations:
    cloud.google.com/app-protocols: '{"logomotive-grpc":"HTTP2"}'
spec:
  type: NodePort
  ports:
    - name: logomotive-grpc
      port: 443
      protocol: TCP
  selector:
    service: logomotive-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logomotive
spec:
  replicas: 2
  selector:
    matchLabels:
      service: logomotive-svc
  template:
    metadata:
      labels:
        service: logomotive-svc
    spec:
      restartPolicy: Always
      containers:
      - name: logomotive
        image: arnemolland/logomotive
        imagePullPolicy: Always
        ports:
        - name: logomotive-app
          containerPort: 8443
