k8s/gce/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  ports:
    - port: 27017
  selector:
    app: logomotive
    tier: mongodb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: logomotive
      tier: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongodb
